# clemens_iigs

./: .clang-format  .gitattributes  .gitignore  AppleIO.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  MANUAL.md  Plan.md  README.md  ROM3_Reset.md  app.c  ascii_to_adb.h  build_macos.zsh  cinekine_crom.txt  clem.bram  clem_2img.c  clem_2img.h  clem_adb.c  clem_audio.c  clem_audio_2.c  clem_code.h  clem_cycle.h  clem_debug.c  clem_debug.h  clem_defs.h  clem_device.h  clem_disasm.c  clem_disk.c  clem_disk.h  clem_drive.c  clem_drive.h  clem_drive35.c  clem_dsk.c  clem_dsk.h  clem_game.c  clem_game.h  clem_iwm.c  clem_iwm_old.c  (+38 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
cmake/: CompilerOptions.cmake  MacOSXBundleInfo.plist.in  VSCompilerOptions.cmake
contrib/: cross_endian.h
demo/: boot.s
devices/: CMakeLists.txt  S7SPHD  S7SPHD.S  _FileInformation.txt  clem_peer.c  hddcard.c  hddcard.h  mockingboard.c  prodos_hdd32.c  prodos_hdd32.h  slot7hdd_firmware.h
docs/: AppleIO.md  Diagnostics.md  EmulatorHostHelp.md  GamePort.md  IWM.md  Integration.md  Interrupts.md  Mockingboard.md  Plan.md  ROM3_Reset.md  ReleaseWorkbook.md  SCC.md  Slot7.md  Smartport.md  Software.md  UserInput.md  VGC.md  gs_rom_3.rom.dis65  iwm_35_notes.txt  myraglen_error.bin.dis65  myraglen_startup.bin.dis65  myraglen_title.bin.dis65  references.txt  rom03_and_data.dis65  rom3_reset_trace.txt
flatpak/: buildFlatpak.sh  com.cinekine.Clemens.appdata.xml  com.cinekine.Clemens.desktop  com.cinekine.Clemens.yaml  com.samirsinha.Clemens.appdata.xml  com.samirsinha.Clemens.desktop  com.samirsinha.Clemens.yaml
host/: .clang-format  CMakeLists.txt  clem_asset_browser.cpp  clem_asset_browser.hpp  clem_assets.cpp  clem_assets.hpp  clem_audio.cpp  clem_audio.hpp  clem_backend.cpp  clem_backend.hpp  clem_backend_old.cpp  clem_backend_old.hpp  clem_command_queue.cpp  clem_command_queue.hpp  clem_configuration.cpp  clem_configuration.hpp  clem_debugger.cpp  clem_debugger.hpp  clem_disk_browser.cpp  clem_disk_browser.hpp  clem_disk_library.cpp  clem_disk_library.hpp  clem_disk_utils.cpp  clem_disk_utils.hpp  clem_display.cpp  clem_display.hpp  clem_file_browser.cpp  clem_file_browser.hpp  clem_frame_state.cpp  clem_frame_state.hpp  clem_front.cpp  clem_front.hpp  clem_host.cpp  clem_host.hpp  clem_host.mm  clem_host_app.cpp  clem_host_platform.h  clem_host_shared.hpp  clem_host_utils.cpp  clem_host_utils.hpp  (+34 more)
host/cinek/: buffer.cpp  buffer.hpp  buffertypes.hpp  circular_buffer.hpp  ckdebug.c  ckdebug.h  ckdefs.h  ckopts.h  cross_endian.h  encode.c  encode.h  equation.hpp  equation.inl  fixedstack.hpp  keyframe.hpp  sequence.hpp  sequence.inl
host/ckaudio/: context.h  core.c  core.h  linuxalsa.c  mathops.c  mathops.h  mixer.c  queue.c  queue.h  types.h  wincoreaudio.c  winmixer.c  wintime.c
host/core/: clem_apple2gs.cpp  clem_apple2gs.hpp  clem_apple2gs_config.hpp  clem_disk_asset.cpp  clem_disk_asset.hpp  clem_disk_status.hpp  clem_disk_utils.cpp  clem_disk_utils.hpp  clem_prodos_disk.cpp  clem_prodos_disk.hpp  clem_snapshot.cpp  clem_snapshot.hpp  clem_storage_unit.cpp  clem_storage_unit.hpp
host/disklib/: clem_disk_asset.cpp  clem_disk_asset.hpp  clem_disk_browser.cpp  clem_disk_browser.hpp  clem_prodos_disk.cpp  clem_prodos_disk.hpp  clem_storage_unit.cpp  clem_storage_unit.hpp
host/ext/: stb.c  stb_image.h
host/ext/imgui/: imgui_markdown.h  imgui_memory_editor.h  imgui_widgets.cpp
host/ext/imgui/imgui_filedialog/: ImGuiFileDialog.cpp  ImGuiFileDialogConfig.h
host/ext/sokol/: sokol_app.h  sokol_audio.h  sokol_gfx_ext.h
host/ext/spdlog/: tweakme.h
host/fonts/: font_bloada1024.h  font_printchar21.h  font_prnumber3.h
host/harness/: CMakeLists.txt  harness.cpp  harness.hpp  machine.cpp  machine.hpp  main.cpp  test.json
host/images/: LICENSE.md  app_icons_png.h  card_png.h  debugger_png.h  disk35_png.h  disk525_png.h  eject_png.h  fast_emulate_png.h  folder_solid_png.h  hdd_png.h  help_png.h  joystick_png.h  load_png.h  lock_png.h  play_run_png.h  power_png.h  reboot_png.h  save_png.h  settings_png.h  stop_run_png.h
host/imgui/: CMakeLists.txt  imgui_memory_editor.h
host/platform/: host_linux.c  host_macos.m  host_windows.c
host/resources/: clemens.rc  icon.icns
host/shaders/: d3d11.inl  glcore33.inl
host/shaders/d3d11/: hires.hlsl  vertex.hlsl
host/shaders/glsl/: super.fs
host/shaders/hlsl/: super.ps
host/shaders/source/: vertex.hlsl
host/strings/: clem_debug.inl  clem_help.inl  clem_hotkeys.inl  clem_settings.inl  clem_welcome.inl
host/utils/: dump_compare.py  dump_to_bin.py
iocards/: CMakeLists.txt  clem_peer.c  clem_peer.h  mb-audit.labels  mockingboard.c  mockingboard.h
smartport/: CMakeLists.txt  S7SPHD.S  prodos_hdd32.c  prodos_hdd32.h
tests/: CMakeLists.txt  clem.c  test_c029.c  test_c035_shadow.c  test_c036.c  test_clem.c  test_cxrom.c  test_disk_2img.c  test_disk_nib.c  test_disk_woz.c  test_dsk.c  test_emulate_minimal.c  test_gameport.c  test_lcbank.c  test_mmio_video_switches.c  test_ramrd.c  test_reset.c  test_scc.c  test_shadow_00_01.c  test_woz.c  util.c  util.h  utils.c  utils.h
tests/cpu/: test_adc.c
tests/data/: a2gs_system_disk_1_1.woz
tests/munit/: CMakeLists.txt
tests/unity/: CMakeLists.txt
